footer html and css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,45 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header></header>
+
+    <footer>
+        <div id="footer-container" class="fc-uno">
+            <div id="fc-1" class="fc">
+                <h3>COMPANY</h3>
+                <ul>
+                    <li>About us<a></a></li>
+                    <li>Careers<a></a></li>
+                    <li>Terms<a></a></li>
+                    <li>Privacy<a></a></li>
+                    <li>Interest Based Ads<a></a></li>
+                    <li>Ad Preferences<a></a></li>
+                    <li>Help<a></a></li>
+                </ul>
+            </div>
+            <div id="fc-2" class="fc">
+                <h3>WORK WITH US</h3>
+                <ul>
+                    <li>Authors<a></a></li>
+                    <li>Advertise<a></a></li>
+                    <li>Authors & ads blogs<a></a></li>
+                    <li>API<a></a></li>
+                    
+                </ul>
+            </div>
+            <div id="fc-3" class="fc"><h3>CONNECT</h3>
+                <ul>
+                    
+                </ul>
+            </div>
+            <div id="fc-4" class="fc"><h3></h3>
+                <ul>
+                    <li>	&#169;  Excellent reads and writes </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
     <script src="index.js"></script>
 </body>
 </html>
