--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="fc-1" class="fc">
                 <h3>COMPANY</h3>
                 <ul>
-                    <li>About us<a></a></li>
+                    <li class="list-footer">About us<a></a></li>
                     <li>Careers<a></a></li>
                     <li>Terms<a></a></li>
                     <li>Privacy<a></a></li>
