completed footer frontend

--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excellent Reads and Writes</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header></header>
 
     <footer>
+
         <div id="footer-container" class="fc-uno">
+
             <div id="fc-1" class="fc">
                 <h3>COMPANY</h3>
                 <ul>
-                    <li class="list-footer">About us<a></a></li>
+                    <li>About us<a></a></li>
                     <li>Careers<a></a></li>
                     <li>Terms<a></a></li>
                     <li>Privacy<a></a></li>
@@ -23,6 +26,7 @@
                     <li>Help<a></a></li>
                 </ul>
             </div>
+
             <div id="fc-2" class="fc">
                 <h3>WORK WITH US</h3>
                 <ul>
@@ -33,17 +37,43 @@
                     
                 </ul>
             </div>
-            <div id="fc-3" class="fc"><h3>CONNECT</h3>
-                <ul>
+
+            <div id="fc-3" class="fc">
+                <h3>CONNECT</h3>
+                <div id="fc-social-media-container">
+                    <div id="fc-sm-box-1">
+                        <a><i class="fa-brands fa-instagram"></i></a>
+                        <a><i class="fa-brands fa-x-twitter"></i></a>
+                        <a><i class="fa-brands fa-facebook"></i></a>
+                        <a><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div id="fc-4" class="fc">
+
+                <div class="small">  <!-- small div start -->
                     
-                </ul>
+                    <div class="smaller"> <!-- smaller div start -->
+                        <a>
+                            <img src="https://s.gr-assets.com/assets/app/badge-ios-desktop-homepage-6ac7ae16eabce57f6c855361656a7540.svg">
+                        </a>
+                        <a>
+                            <img src="https://s.gr-assets.com/assets/app/badge-android-desktop-home-0f517cbae4d56c88a128d27a7bea1118.png">
+                        </a>
+                    </div> <!-- smaller div end -->
+
+                    <ul>
+                        <li>&#169; Excellent reads and writes</li>
+                        <li>Well read minds are happy minds &#9829;</li>
+                    </ul>
+
+                </div> <!-- small div end -->
+
             </div>
-            <div id="fc-4" class="fc"><h3></h3>
-                <ul>
-                    <li>	&#169;  Excellent reads and writes </li>
-                </ul>
-            </div>
+
         </div>
+
     </footer>
 
     <script src="index.js"></script>
