Add new heading to index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div>Welcome to Excellent Reads and Writes.</div>
+    </header>
 
     <footer>
 
