Add new heading to index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div>Welcome to Excellent Reads and Writes.</div>
+        <div><h1>Welcome to Excellent Reads and Writes.</h1></div>
     </header>
 
     <footer>
