Made first change to feature1 branch

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <div><h1>Welcome to Excellent Reads and Writes.</h1></div>
+        <p>First change in feature 1</p>
     </header>
 
     <footer>
