Add button to google

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <div><h1>Welcome to Excellent Reads and Writes.</h1></div>
         <p>First change in feature 1</p>
+        <button><a href="https://google.com">Click me</a></button>
     </header>
 
     <footer>
